[tool.poetry]
name = "wprofiler"
version = "0.1.0"
description = "WSGI Profiler"
authors = ["junyoungjang <wnsdud3256@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \__pycache_
  | \.venv
)/
'''
